# email-triage-openenv

./: README.md  inference.py  main.py  openenv.yaml  pyproject.toml
app/: env.py
server/: app.py
