[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [
  { name="Biswajit", email="biswajitputel08@gmail.com" }
]
dependencies = [
  "pydantic",
  "fastapi",
  "uvicorn"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"